--- a/CatScratchApp/index.html
+++ b/CatScratchApp/index.html
@@ -18,7 +18,7 @@
             <h1>CatScratch</h1>
         </div>
     </div>
-	<div class="container main-frame" ng-app="CatApp" ng-controller="mainController" ng-init="init()">
+	<div style="background:#d0d6e0" class="container main-frame" ng-app="CatApp" ng-controller="mainController" ng-init="init()" ng-app="" ng-init="textBox='hello, harasser'">
 		<div class="search-box row-fluid form-inline"></div>
         <div class="results-top"></div>
         <div class="results-container">
@@ -26,8 +26,8 @@
         </div>
         <div class="results-bottom"></div>
 	</div>
-	<h1>Enter a harassing word</h1>
-    <div ng-app="" ng-init="textBox='hello, harasser'">
+	<h1 id="wrapper" style="text-align: center">Enter a harassing word</h1>
+    <div id="wrapper" style="text-align: center" class="center-block" ng-app="" ng-init="textBox='hello, harasser'">
           <input type="text" ng-model="textBox" id="input"name="input"/>
           <button id="searchBtn" name="searchBtn" ng-model="searchBtn">Search</button>
       <script>
