button functionality fix

--- a/CatScratchApp/index.html
+++ b/CatScratchApp/index.html
@@ -34,7 +34,7 @@
 
 		  <!-- BUTTON -->
 
-		  <button style="margin:-1px 7px 0 2px" class="button">Search</button>
+		  <button ng-model="searchBtn" name="searchBtn" style="margin:-1px 7px 0 2px" class="button" id="searchBtn">Search</button>
 
       <script>
           (function(){
