--- a/CatScratchApp/index.html
+++ b/CatScratchApp/index.html
@@ -1,50 +1,48 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>CatScratch</title>
-	<!-- INCLUDE REQUIRED THIRD PARTY LIBRARY JAVASCRIPT AND CSS -->
-	<script type="text/javascript" src="js/angular.min.js"></script>
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/bootstrap-responsive.min.css">
 
-	<!-- INCLUDE APPLICATION SPECIFIC CSS AND JAVASCRIPT -->
-	<script type="text/javascript" src="js/app/app.js"></script>
-	<script type="text/javascript" src="js/app/controllers/mainController.js"></script>
-	<link rel="stylesheet" href="css/main.css">
+<head>
+    <title>CatScratch</title>
+    <!-- INCLUDE REQUIRED THIRD PARTY LIBRARY JAVASCRIPT AND CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
     <div class='banner'>
         <div class='container'>
             <h1>CatScratch</h1>
         </div>
     </div>
-	<div style="background:#37243f" class="container main-frame" ng-app="CatApp" ng-controller="mainController" ng-init="init()" ng-app="" ng-init="textBox='hello, harasser'">
-		<div class="search-box row-fluid form-inline"></div>
+    <div style="background:#37243f" class="container main-frame">
+        <div class="search-box row-fluid form-inline"></div>
         <div class="results-top"></div>
         <div class="results-container">
             <ul class="episode-list"></ul>
         </div>
         <div class="results-bottom"></div>
-	</div>
-	<h1 id="wrapper" style="text-align: center">Enter a harassing word</h1>
-    <div id="wrapper" style="text-align: center" class="center-block" ng-app="" ng-init="textBox='hello, harasser'">
+    </div>
+    <h1 id="wrapper" style="text-align: center">Enter a harassing word</h1>
+    <div id="wrapper" style="text-align: center" class="center-block">
 
-		  <input class="searchboxer" type="text" ng-model="textBox" id="input"name="input" placeholder="Hello, Harasser" ></input>
+        <input class="searchboxer" type="text" id="input" name="input" placeholder="Hello, Harasser"></input>
 
-		  <button ng-model="searchBtn" name="searchBtn" style="margin:-1px 7px 0 2px" class="button" id="searchBtn">Search</button>
+        <button name="searchBtn" style="margin:-1px 7px 0 2px" class="button" id="searchBtn">Search</button>
 
-      <script>
-          (function(){
-            var input = document.getElementById('input');
-            var searchBtn = document.getElementById('searchBtn');
-            console.log(input.value);
-            var onClick = function(){
-              var str = input.value;
-              console.log(str);
-            };
-            searchBtn.addEventListener('click', onClick);
-          }());
-      </script>
+        <script>
+            (function() {
+                var input = document.getElementById('input');
+                var searchBtn = document.getElementById('searchBtn');
+                console.log(input.value);
+                var onClick = function() {
+                    var str = input.value;
+                    console.log(str);
+                };
+                searchBtn.addEventListener('click', onClick);
+            }());
+        </script>
     </div>
 </body>
+
 </html>
