--- a/CatScratchApp/index.html
+++ b/CatScratchApp/index.html
@@ -13,7 +13,9 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+
     <div class='banner'>
+		<img id='kitty' src="/Users/Gershkowitz/Desktop/cat-scratch/CatScratchApp/img/cat1.png" alt="" style="width:304px;height:228px;">
         <div class='container'>
             <h1>CatScratch</h1>
         </div>
@@ -45,6 +47,9 @@
             searchBtn.addEventListener('click', onClick);
           }());
       </script>
+
+
+
     </div>
 </body>
 </html>
