--- a/CatScratchApp/index.html
+++ b/CatScratchApp/index.html
@@ -49,7 +49,7 @@
         </thead>
         <tbody class="table-hover">
         <tr>
-<td><img class="propics" src="/Users/Gershkowitz/Desktop/cat-scratch/CatScratchApp/img/twitpic.jpeg" alt="Mountain View" style="width:100height:100"></td>
+<td><img class="propics" src="https://twitter.com/ggersh/profile_image?size=original" alt="Mountain View" style="width:100height:100"></td>
         <td class="text-left">@ggersh</td>
         <td class="text-left"> sadfjkhsadkfljhsadkjfhaslkjdfh</td>
         <td class="text-left"> sadfjhsadkjfhsakjdhflkasjdfhkd</td>
