--- a/CatScratchApp/index.html
+++ b/CatScratchApp/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body>
+<body background="Nebula HD Wallpaper - Samsung Galaxy S5 HD Wallpapers Free.jpg">
 
     <div class='banner'>
-		<img id='kitty' src="/Users/Gershkowitz/Desktop/cat-scratch/CatScratchApp/img/cat1.png" alt="" style="width:304px;height:228px;">
+		<img id='kitty' src="img/cat1.png" alt="" style="width:304px;height:228px;">
         <div class='container'>
             <h1>CatScratch</h1>
         </div>
@@ -25,10 +25,10 @@
         </div>
         <div class="results-bottom"></div>
     </div>
-    <h1 id="wrapper" style="text-align: center">Enter a harassing word</h1>
+    <!-- <h1 id="wrapper" style="text-align: center"><font color="white">Enter a harassing word</font></h1> -->
     <div id="wrapper" style="text-align: center" class="center-block">
 
-        <input class="searchboxer" type="text" id="input" name="input" placeholder="Hello, Harasser"></input>
+        <input class="searchboxer" type="text" id="input" name="input" placeholder="Enter a keyword..."></input>
 
         <button name="searchBtn" style="margin:-1px 7px 0 2px" class="button" id="searchBtn">Search</button>
         <div class="spacer"></div>
