--- a/javascriptFile.html
+++ b/javascriptFile.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Enter a harassing word</h1>
-  <div ng-app="" ng-init="textBox='warriors'">
+  <div ng-app="" ng-init="textBox='Harambe'">
         <input type="text" ng-model="textBox" id="input"name="input"/>
         <button id="searchBtn" name="searchBtn" ng-model="searchBtn">Search</button>
     <script>
